testsuite/tests/typecheck/should_fail/tcfail127.hs
module ShouldFail where

foo :: IO (Num a => a -> a)
foo = error "urk"

-- baz :: (Num a => a -> a) -> Int
-- baz = error "urk"
