testsuite/tests/typecheck/should_fail/tcfail127.stderr

tcfail127.hs:3:8: error:
    Illegal polymorphic or qualified type: Num a => a -> a
    GHC doesn't yet support impredicative polymorphism
    In the type signature for ‘foo’: foo :: IO (Num a => a -> a)
